# rops

./: Cargo.toml  LICENSE  Makefile  README.md  readme.md  taplo.toml
.github/actions/setup-rops/: action.yml
.github/workflows/: build.yml
dev/: install-rops  lint-rs
src/: blocks.rs  charts.rs  docker.rs  error.rs  extra.rs  git.rs  main.rs  repo.rs  self_update.rs  settings.rs  system.rs  tools.rs  utils.rs
